[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "dux"
version = "0.1.0"
description = "CLI for GitHub issue-based Git worktrees"
readme = "README.md"
requires-python = ">=3.9"

[project.scripts]
dux = "dux:main"

[tool.setuptools]
py-modules = ["dux"]
